--- a/FRONT/src/app/login/login.html
+++ b/FRONT/src/app/login/login.html
@@ -8,7 +8,7 @@
   <div class="login-card">
     <div class="login-card-content">
       <div class="login-header">
-        <span class="material-symbols-outlined login-header-icon"> local_shipping </span>
+        <span class="material-symbols-outlined notranslate login-header-icon"> local_shipping </span>
         <h1 class="login-title">Gestion Entrepôts</h1>
       </div>
       <h2 class="login-subtitle">Connexion</h2>
@@ -22,7 +22,7 @@
         <div class="form-group">
           <label class="form-label" for="username">Identifiant</label>
           <div class="input-wrapper">
-            <span class="material-symbols-outlined input-icon">person</span>
+            <span class="material-symbols-outlined notranslate input-icon">person</span>
             <input
               id="username"
               type="text"
@@ -39,7 +39,7 @@
         <div class="form-group">
           <label class="form-label" for="password">Mot de passe</label>
           <div class="input-wrapper">
-            <span class="material-symbols-outlined input-icon">lock</span>
+            <span class="material-symbols-outlined notranslate input-icon">lock</span>
 
             <input
               id="password"
@@ -58,7 +58,7 @@
               aria-label="Afficher ou masquer le mot de passe"
               (click)="togglePassword()"
             >
-              <span class="material-symbols-outlined">
+              <span class="material-symbols-outlined notranslate">
                 {{ showPassword ? 'visibility_off' : 'visibility' }}
               </span>
             </button>
