--- a/FRONT/src/app/register/register.html
+++ b/FRONT/src/app/register/register.html
@@ -64,7 +64,7 @@
                     class="password-toggle"
                     aria-label="Afficher le mot de passe"
                   >
-                    <span class="material-symbols-outlined">visibility_off</span>
+                    <span class="material-symbols-outlined notranslate">visibility_off</span>
                   </button>
                 </div>
               </div>
@@ -86,7 +86,7 @@
                     class="password-toggle"
                     aria-label="Afficher le mot de passe confirmé"
                   >
-                    <span class="material-symbols-outlined">visibility_off</span>
+                    <span class="material-symbols-outlined notranslate">visibility_off</span>
                   </button>
                 </div>
                 <p class="field-error">
@@ -104,7 +104,7 @@
                   <option>Direction</option>
                   <option>Administrateur</option>
                 </select>
-                <span class="material-symbols-outlined select-icon">
+                <span class="material-symbols-outlined notranslate select-icon">
                   expand_more
                 </span>
               </div>
