--- a/FRONT/src/app/enregistrement/enregistrement.html
+++ b/FRONT/src/app/enregistrement/enregistrement.html
@@ -6,7 +6,7 @@
         <div class="truck-modal-header">
           <h2 class="truck-modal-title">Enregistrer un nouveau camion</h2>
           <button type="button" class="truck-modal-close" aria-label="Fermer">
-            <span class="material-symbols-outlined">close</span>
+            <span class="material-symbols-outlined notranslate">close</span>
           </button>
         </div>
 
@@ -66,7 +66,7 @@
 
         <div class="truck-modal-footer">
           <div class="truck-confirm">
-            <span class="material-symbols-outlined truck-confirm-icon">
+            <span class="material-symbols-outlined notranslate truck-confirm-icon">
               check_circle
             </span>
             <div>
