--- a/FRONT/src/app/user-historique/user-historique.html
+++ b/FRONT/src/app/user-historique/user-historique.html
@@ -16,7 +16,7 @@
             (click)="exporterCSV()"
             [disabled]="filteredRows.length === 0"
           >
-            <span class="material-symbols-outlined">download</span>
+            <span class="material-symbols-outlined notranslate">download</span>
             <span>Exporter</span>
           </button>
         </header>
@@ -27,7 +27,7 @@
             <div class="search-wrapper">
               <div class="search-field">
                 <div class="search-icon-box">
-                  <span class="material-symbols-outlined">search</span>
+                  <span class="material-symbols-outlined notranslate">search</span>
                 </div>
                 <input
                   type="text"
@@ -52,7 +52,7 @@
                   <option value="today">Aujourd'hui</option>
                   <option value="7days">7 derniers jours</option>
                 </select>
-                <span class="material-symbols-outlined">arrow_drop_down</span>
+                <span class="material-symbols-outlined notranslate">arrow_drop_down</span>
               </div>
 
               <!-- Filtre Statut -->
@@ -69,7 +69,7 @@
                   <option value="Déchargé">Déchargé</option>
                   <option value="Annulé">Annulé</option>
                 </select>
-                <span class="material-symbols-outlined">arrow_drop_down</span>
+                <span class="material-symbols-outlined notranslate">arrow_drop_down</span>
               </div>
             </div>
           </div>
@@ -123,7 +123,7 @@
                     <!-- Statut -->
                     <td>
                       <span [ngClass]="getStatusCssClass(row.statut)">
-                        <span class="material-symbols-outlined status-icon">{{
+                        <span class="material-symbols-outlined notranslate status-icon">{{
                           getStatusIcon(row.statut)
                         }}</span>
                         {{ row.statut }}
@@ -137,7 +137,7 @@
                         class="icon-ghost-button"
                         title="Voir le détail du passage"
                       >
-                        <span class="material-symbols-outlined">visibility</span>
+                        <span class="material-symbols-outlined notranslate">visibility</span>
                       </button>
                     </td>
                   </tr>
