--- a/FRONT/src/styles.scss
+++ b/FRONT/src/styles.scss
@@ -89,6 +89,27 @@ video {
   height: auto;
 }
 
+/* --- MATERIAL ICONS --- */
+.material-symbols-outlined {
+  font-family: 'Material Symbols Outlined';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+  translate: no; /* Standard property to prevent translation */
+}
+.material-symbols-outlined.notranslate {
+  /* Extra specificity just in case */
+  translate: no; 
+}
+
 /* --- LAYOUT UTILITIES --- */
 .page-container {
     min-height: 100vh;
